# gin_contrib/example/docs/swagger.json
@@ -18,7 +18,7 @@
     "host": "petstore.swagger.io",
     "basePath": "/v2",
     "paths": {
-        "/testapi/pet/get-pet-by-id/{pet_id}/": {
+        "/testapi/pets/{id}/": {
             "get": {
                 "description": "get pet by ID",
                 "consumes": [
@@ -28,12 +28,12 @@
                     "application/json"
                 ],
                 "summary": "get a  pet",
-                "operationId": "get-pet-by-id",
+                "operationId": "get_pet_by_id",
                 "parameters": [
                     {
                         "type": "integer",
                         "description": "pet id",
-                        "name": "pet_id",
+                        "name": "id",
                         "in": "path",
                         "required": true
                     }
@@ -54,7 +54,7 @@
                     "application/json"
                 ],
                 "summary": "Update product attributes",
-                "operationId": "update-product",
+                "operationId": "update_product",
                 "parameters": [
                     {
                         "type": "integer",
